--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dis/index.js",
-    "build": "tsc -p .",
-    "dev": "nodemon src/index.ts",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
