--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node dis/index.js",
+    "build": "tsc -p .",
+    "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "google-auth-library": "^7.9.2",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.13",
     "pg": "^8.7.1",
