--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dis/index.js",
-    "build": "tsc -p .",
-    "dev": "nodemon src/index.ts",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,10 +20,10 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "google-auth-library": "^7.9.2",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.13",
     "pg": "^8.7.1",
+    "google-auth-library": "^7.9.2",
     "redis": "^3.1.2",
     "ts-node": "^10.2.1",
     "typeorm": "^0.2.37",
