--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^2.0.13",
     "pg": "^8.7.1",
     "google-auth-library": "^7.9.2",
+    "cors": "^2.8.5",
     "redis": "^3.1.2",
     "ts-node": "^10.2.1",
     "typeorm": "^0.2.37",
